# acortador-url

./: .env  Cargo.toml  Dockerfile  README.md  db.sqlite  db.sqlite-shm  db.sqlite-wal  entrypoint.sh
migrations/: 20250813024708_create_urls_table.sql  20250813041137_add_clicks_to_urls_table.sql
src/: lib.rs  main.rs
templates/: index.html
tests/: api.rs
