[package]
name = "acortador-url"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
nanoid = "0.4"
dotenv = "0.15"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
